--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
 :root {
+  --bg-white: #ffffff;
+  --bg-blue: #323558;
+  --text-black: #282828;
+  --text-white: #f0f0f0;
+  --margin-1: 0.25rem;
+  --margin-2: 0.5rem;
+  --margin-3: 1rem;
+  --margin-4: 1.5rem;
+  --size-1: 1rem;
+  --size-2: 2rem;
 }
 
 * {
   box-sizing: border-box;
 }
 
-body {
+html, body {
+  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Helvetica", sans-serif;
 }
