--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -1,10 +1,17 @@
 .page {
-  height: 100vh;
+  background: var(--bg-white);
+  padding: var(--margin-4);
+  color: var(--text-black);
+  font-family: Arial, sans-serif;
+}
+
+.header {
+  padding: var(--margin-3);
+  padding-bottom: var(--margin-4);
+  background: var(--bg-blue);
+  color: var(--text-white);
+  font-size: var(--size-2);
 }
 
 .main {
-  background: #f4f4f4;
-  color: #282828;
-  padding: 16px;
-  height: 75%;
 }
