--- a/src/styles/Challenge.module.css
+++ b/src/styles/Challenge.module.css
@@ -1,5 +1,25 @@
 .main {
-  margin-top: var(--margin-3);
   border: 1px solid #d0d0d0;
+  background: var(--bg-gray0);
+  box-shadow: inset 0 0 6px 1px #00000010;
+}
+
+.title {
   padding: var(--margin-3);
+  font-size: var(--size-2);
+  font-weight: bold;
+  user-select: none;
+}
+
+.content {
+  padding: 0 var(--margin-3) var(--margin-3);
+}
+
+.description {
+  user-select: none;
+}
+
+.canvas {
+  border: var(--border);
+  margin: var(--margin-3) 0;
 }
